# agent-stack

./: .env.example  .gitignore  AGENT-STACK-BLUEPRINT.md  AGENT-STACK-LEARNING-PROJECT-INSTRUCTIONS.md  AGENT-STACK-LEARNING-REFERENCE.md  CLAUDE.md  README.md  getting-started.md  pyproject.toml  script-draft.edit-brief.md
.claude/: CLAUDE.md
docs/: EXAMPLE-AMV.md  EXAMPLE-TRAVEL-VLOG.md  README.md  agent-retrospective-corrections.md  ai-director-agent-system.md  architecture.md  concept-script-phase1-handoff.md  concept-script-phase2-handoff.md  concept-script-phase3-handoff.md  decisions-mode-spec.md  edit-brief-phase1-handoff.md  edit-brief-phase2-handoff.md  feedback-iteration-phase1-handoff.md  feedback-iteration-phase2-handoff.md  handoff-2026-05-26.md  handoff-visual-generation-phase2.md  handoff-visual-generation.md  handoff-voiceover-direction.md  naming-conventions.md  orchestrator-phase2-handoff.md  orchestrator-phase3-handoff.md  orchestrator-research-signals-langgraph.md  scene-forge-learning-and-agent-plan.md  shared-shot-schema.md  technique-research-phase1-handoff.md  technique-research-phase2-handoff.md  v2-refinements-agent-runtime.md  v2-refinements-concept-script.md  v2-refinements-edit-brief.md  v2-refinements-feedback-iteration.md  v2-refinements-music-curation.md  v2-refinements-orchestrator.md  v2-refinements-technique-research.md  v2-refinements-voiceover-direction.md  v2-refinements.md  visual-generation-cleanup-report.md  visual-generation-known-issues.md  voiceover-direction-phase1-research-signals.md  voiceover-direction-phase2-handoff.md
(+62 files in other folders)
